Integrador-AnalizadorLexicoSintacticoYSemanticoDeC/obj/TPI.output
Grammar

    0 $accept: translation_unit $end

    1 translation_unit: external_declaration
    2                 | translation_unit external_declaration

    3 external_declaration: function_definition
    4                     | declaration

    5 function_definition: declaration_specifiers declarator declaration_list compound_statement
    6                    | declaration_specifiers declarator compound_statement
    7                    | declarator declaration_list compound_statement
    8                    | declarator compound_statement

    9 declaration: declaration_specifiers ';'
   10            | declaration_specifiers init_declarator_list ';'

   11 declaration_list: declaration
   12                 | declaration_list declaration

   13 declaration_specifiers: storage_class_specifier
   14                       | storage_class_specifier declaration_specifiers
   15                       | type_specifier
   16                       | type_specifier declaration_specifiers
   17                       | type_qualifier
   18                       | type_qualifier declaration_specifiers

   19 init_declarator_list: init_declarator
   20                     | init_declarator_list ',' init_declarator
   21                     | init_declarator_list ',' error

   22 init_declarator: declarator
   23                | declarator '=' initializer
   24                | declarator error

   25 storage_class_specifier: "auto"
   26                        | "register"
   27                        | "static"
   28                        | "extern"
   29                        | "typedef"

   30 type_specifier: "void"
   31               | "char"
   32               | "short"
   33               | "int"
   34               | "long"
   35               | "float"
   36               | "double"
   37               | "signed"
   38               | "unsigned"
   39               | struct_or_union_specifier
   40               | enum_specifier
   41               | NOMBRE_DE_TYPEDEF

   42 type_qualifier: "const"
   43               | "volatile"

   44 $@1: /* empty */

   45 struct_or_union_specifier: struct_or_union $@1 factorizacion_struct_or_union_specifier

   46 $@2: /* empty */

   47 factorizacion_struct_or_union_specifier: '{' $@2 struct_declaration_list '}'

   48 $@3: /* empty */

   49 factorizacion_struct_or_union_specifier: IDENTIFICADOR '{' $@3 struct_declaration_list '}'
   50                                        | IDENTIFICADOR

   51 struct_or_union: "struct"
   52                | "union"

   53 struct_declaration_list: struct_declaration
   54                        | struct_declaration_list struct_declaration

   55 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

   56 specifier_qualifier_list: type_specifier
   57                         | type_specifier specifier_qualifier_list
   58                         | type_qualifier
   59                         | type_qualifier specifier_qualifier_list

   60 struct_declarator_list: struct_declarator
   61                       | struct_declarator_list ',' struct_declarator

   62 struct_declarator: declarator
   63                  | ':' constant_expression
   64                  | declarator ':' constant_expression

   65 $@4: /* empty */

   66 enum_specifier: "enum" $@4 factorizacion_enum_specifier

   67 factorizacion_enum_specifier: '{' enumerator_list '}'
   68                             | IDENTIFICADOR '{' enumerator_list '}'
   69                             | IDENTIFICADOR

   70 enumerator_list: enumerator
   71                | enumerator_list ',' enumerator

   72 enumerator: IDENTIFICADOR
   73           | IDENTIFICADOR '=' constant_expression

   74 declarator: pointer direct_declarator
   75           | direct_declarator

   76 direct_declarator: IDENTIFICADOR
   77                  | '(' declarator ')'
   78                  | direct_declarator '[' constant_expression ']'
   79                  | direct_declarator '[' ']'

   80 $@5: /* empty */

   81 direct_declarator: direct_declarator '(' $@5 factorizacion_direct_declarator

   82 factorizacion_direct_declarator: parameter_type_list ')'
   83                                | identifier_list ')'
   84                                | ')'

   85 $@6: /* empty */

   86 pointer: '*' $@6 factorizacion_pointer

   87 factorizacion_pointer: /* empty */
   88                      | type_qualifier_list
   89                      | pointer
   90                      | type_qualifier_list pointer

   91 type_qualifier_list: type_qualifier
   92                    | type_qualifier_list type_qualifier

   93 parameter_type_list: parameter_list
   94                    | parameter_list ',' "..."

   95 parameter_list: parameter_declaration
   96               | parameter_list ',' parameter_declaration

   97 parameter_declaration: declaration_specifiers declarator
   98                      | declaration_specifiers abstract_declarator
   99                      | declaration_specifiers

  100 identifier_list: IDENTIFICADOR
  101                | identifier_list ',' IDENTIFICADOR

  102 initializer: assignment_expression
  103            | '{' initializer_list '}'
  104            | '{' initializer_list ',' '}'

  105 initializer_list: initializer
  106                 | initializer_list ',' initializer

  107 type_name: specifier_qualifier_list
  108          | specifier_qualifier_list abstract_declarator

  109 abstract_declarator: pointer
  110                    | direct_abstract_declarator
  111                    | pointer direct_abstract_declarator

  112 direct_abstract_declarator: '(' abstract_declarator ')'
  113                           | '[' ']'
  114                           | '[' constant_expression ']'
  115                           | direct_abstract_declarator '[' ']'
  116                           | direct_abstract_declarator '[' constant_expression ']'
  117                           | '(' ')'
  118                           | '(' parameter_type_list ')'
  119                           | direct_abstract_declarator '(' ')'
  120                           | direct_abstract_declarator '(' parameter_type_list ')'

  121 statement: labeled_statement
  122          | expression_statement
  123          | compound_statement
  124          | selection_statement
  125          | iteration_statement
  126          | jump_statement

  127 $@7: /* empty */

  128 labeled_statement: IDENTIFICADOR $@7 ':' statement

  129 $@8: /* empty */

  130 labeled_statement: NOMBRE_DE_TYPEDEF $@8 ':' statement

  131 $@9: /* empty */

  132 labeled_statement: "case" $@9 constant_expression ':' statement
  133                  | "case" error

  134 $@10: /* empty */

  135 labeled_statement: "default" $@10 ':' statement

  136 expression_statement: ';'
  137                     | expression ';'

  138 $@11: /* empty */

  139 compound_statement: '{' $@11 factorizacion_compound_statement

  140 factorizacion_compound_statement: '}'
  141                                 | statement_list '}'
  142                                 | declaration_list '}'
  143                                 | declaration_list statement_list '}'

  144 statement_list: statement
  145               | statement_list statement

  146 $@12: /* empty */

  147 selection_statement: "if" $@12 factorizacion_selection_statement

  148 $@13: /* empty */

  149 selection_statement: "switch" $@13 '(' expression ')' statement

  150 factorizacion_selection_statement: '(' expression ')' statement
  151                                  | '(' expression ')' statement "else" statement
  152                                  | '(' error

  153 $@14: /* empty */

  154 iteration_statement: "while" $@14 '(' expression ')' statement

  155 $@15: /* empty */

  156 iteration_statement: "do" $@15 statement "while" '(' expression ')' ';'

  157 $@16: /* empty */

  158 iteration_statement: "for" $@16 factorizacion_iteration_statement

  159 factorizacion_iteration_statement: '(' expression_statement expression_statement ')' statement
  160                                  | '(' expression_statement expression_statement expression ')' statement

  161 $@17: /* empty */

  162 jump_statement: "goto" $@17 IDENTIFICADOR ';'

  163 $@18: /* empty */

  164 jump_statement: "continue" $@18 ';'

  165 $@19: /* empty */

  166 jump_statement: "break" $@19 ';'

  167 $@20: /* empty */

  168 jump_statement: "return" $@20 factorizacion_jump_statement

  169 factorizacion_jump_statement: ';'
  170                             | expression ';'

  171 expression: assignment_expression
  172           | expression ',' assignment_expression
  173           | expression ',' error

  174 assignment_expression: conditional_expression
  175                      | unary_expression assignment_operator assignment_expression

  176 assignment_operator: '='
  177                    | "*="
  178                    | "/="
  179                    | "%="
  180                    | "+="
  181                    | "-="
  182                    | "<<="
  183                    | ">>="
  184                    | "&="
  185                    | "^="
  186                    | "|="

  187 constant_expression: conditional_expression

  188 conditional_expression: logical_or_expression
  189                       | logical_or_expression '?' expression ':' conditional_expression
  190                       | logical_or_expression '?' error ':' conditional_expression
  191                       | logical_or_expression '?' expression ':' error

  192 logical_or_expression: logical_and_expression
  193                      | logical_or_expression "||" logical_and_expression
  194                      | logical_or_expression "||" error

  195 logical_and_expression: inclusive_or_expression
  196                       | logical_and_expression "&&" inclusive_or_expression
  197                       | logical_and_expression "&&" error

  198 inclusive_or_expression: exclusive_or_expression
  199                        | inclusive_or_expression '|' exclusive_or_expression

  200 exclusive_or_expression: and_expression
  201                        | exclusive_or_expression '^' and_expression

  202 and_expression: equality_expression
  203               | and_expression '&' equality_expression
  204               | and_expression '&' error

  205 equality_expression: relational_expression
  206                    | equality_expression "==" relational_expression
  207                    | equality_expression "==" error
  208                    | equality_expression "!=" relational_expression
  209                    | equality_expression "!=" error

  210 relational_expression: shift_expression
  211                      | relational_expression '<' shift_expression
  212                      | relational_expression '<' error
  213                      | relational_expression '>' shift_expression
  214                      | relational_expression '>' error
  215                      | relational_expression "<=" shift_expression
  216                      | relational_expression "<=" error
  217                      | relational_expression ">=" shift_expression
  218                      | relational_expression ">=" error

  219 shift_expression: additive_expression
  220                 | shift_expression "<<" additive_expression
  221                 | shift_expression ">>" additive_expression

  222 additive_expression: multiplicative_expression
  223                    | additive_expression '+' multiplicative_expression
  224                    | additive_expression '+' error
  225                    | additive_expression '-' multiplicative_expression
  226                    | additive_expression '-' error

  227 multiplicative_expression: cast_expression
  228                          | multiplicative_expression '*' cast_expression
  229                          | multiplicative_expression '*' error
  230                          | multiplicative_expression '/' cast_expression
  231                          | multiplicative_expression '/' error
  232                          | multiplicative_expression '%' cast_expression
  233                          | multiplicative_expression '%' error

  234 cast_expression: unary_expression

  235 $@21: /* empty */

  236 cast_expression: '(' $@21 type_name ')' cast_expression

  237 unary_expression: postfix_expression

  238 $@22: /* empty */

  239 unary_expression: "++" $@22 unary_expression

  240 $@23: /* empty */

  241 unary_expression: "--" $@23 unary_expression
  242                 | unary_operator cast_expression

  243 $@24: /* empty */

  244 unary_expression: "sizeof" $@24 factorizacion_unary_expression

  245 factorizacion_unary_expression: unary_expression
  246                               | '(' type_name ')'

  247 unary_operator: '&'
  248               | '*'
  249               | '+'
  250               | '-'
  251               | '~'
  252               | '!'

  253 postfix_expression: primary_expression
  254                   | postfix_expression '[' expression ']'
  255                   | postfix_expression '(' ')'
  256                   | postfix_expression '(' argument_expression_list ')'
  257                   | postfix_expression '.' IDENTIFICADOR
  258                   | postfix_expression "->" IDENTIFICADOR
  259                   | postfix_expression "++"
  260                   | postfix_expression "--"

  261 argument_expression_list: assignment_expression
  262                         | argument_expression_list ',' assignment_expression

  263 primary_expression: IDENTIFICADOR
  264                   | constante_entera
  265                   | constante_real
  266                   | LITERAL_CADENA

  267 $@25: /* empty */

  268 primary_expression: '(' $@25 expression ')'

  269 constante_entera: CONSTANTE_ENTERA_INT_TYPE
  270                 | CONSTANTE_ENTERA_UNSIGNED_INT_TYPE
  271                 | CONSTANTE_ENTERA_LONG_TYPE
  272                 | CONSTANTE_ENTERA_UNSIGNED_LONG_TYPE

  273 constante_real: CONSTANTE_REAL_FLOAT_TYPE
  274               | CONSTANTE_REAL_DOUBLE_TYPE
  275               | CONSTANTE_REAL_LONG_DOUBLE_TYPE


Terminals, with rules where they appear

$end (0) 0
'!' (33) 252
'%' (37) 232 233
'&' (38) 203 204 247
'(' (40) 77 81 112 117 118 119 120 149 150 151 152 154 156 159 160
    236 246 255 256 268
')' (41) 77 82 83 84 112 117 118 119 120 149 150 151 154 156 159 160
    236 246 255 256 268
'*' (42) 86 228 229 248
'+' (43) 223 224 249
',' (44) 20 21 61 71 94 96 101 104 106 172 173 262
'-' (45) 225 226 250
'.' (46) 257
'/' (47) 230 231
':' (58) 63 64 128 130 132 135 189 190 191
';' (59) 9 10 55 136 137 156 162 164 166 169 170
'<' (60) 211 212
'=' (61) 23 73 176
'>' (62) 213 214
'?' (63) 189 190 191
'[' (91) 78 79 113 114 115 116 254
']' (93) 78 79 113 114 115 116 254
'^' (94) 201
'{' (123) 47 49 67 68 103 104 139
'|' (124) 199
'}' (125) 47 49 67 68 103 104 140 141 142 143
'~' (126) 251
error (256) 21 24 133 152 173 190 191 194 197 204 207 209 212 214 216
    218 224 226 229 231 233
THEN (258)
CONSTANTE_ENTERA_INT_TYPE (259) 269
CONSTANTE_ENTERA_UNSIGNED_INT_TYPE (260) 270
CONSTANTE_ENTERA_LONG_TYPE (261) 271
CONSTANTE_ENTERA_UNSIGNED_LONG_TYPE (262) 272
CONSTANTE_REAL_FLOAT_TYPE (263) 273
CONSTANTE_REAL_LONG_DOUBLE_TYPE (264) 275
CONSTANTE_REAL_DOUBLE_TYPE (265) 274
LITERAL_CADENA (266) 266
"typedef" (267) 29
"extern" (268) 28
"static" (269) 27
"auto" (270) 25
"register" (271) 26
"void" (272) 30
"char" (273) 31
"short" (274) 32
"int" (275) 33
"long" (276) 34
"float" (277) 35
"double" (278) 36
"signed" (279) 37
"unsigned" (280) 38
"const" (281) 42
"volatile" (282) 43
"struct" (283) 51
"union" (284) 52
"enum" (285) 66
"if" (286) 147
"else" (287) 151
"switch" (288) 149
"while" (289) 154 156
"do" (290) 156
"for" (291) 158
"case" (292) 132 133
"default" (293) 135
"goto" (294) 162
"continue" (295) 164
"break" (296) 166
"return" (297) 168
"sizeof" (298) 244
IDENTIFICADOR (299) 49 50 68 69 72 73 76 100 101 128 162 257 258 263
NOMBRE_DE_TYPEDEF (300) 41 130
"..." (301) 94
"+=" (302) 180
"-=" (303) 181
"*=" (304) 177
"/=" (305) 178
"%=" (306) 179
"&=" (307) 184
"|=" (308) 186
"^=" (309) 185
"<<=" (310) 182
">>=" (311) 183
"||" (312) 193 194
"&&" (313) 196 197
"==" (314) 206 207
"!=" (315) 208 209
">=" (316) 217 218
"<=" (317) 215 216
"<<" (318) 220
">>" (319) 221
"->" (320) 258
"++" (321) 239 259
"--" (322) 241 260


Nonterminals, with rules where they appear

$accept (92)
    on left: 0
translation_unit (93)
    on left: 1 2, on right: 0 2
external_declaration (94)
    on left: 3 4, on right: 1 2
function_definition (95)
    on left: 5 6 7 8, on right: 3
declaration (96)
    on left: 9 10, on right: 4 11 12
declaration_list (97)
    on left: 11 12, on right: 5 7 12 142 143
declaration_specifiers (98)
    on left: 13 14 15 16 17 18, on right: 5 6 9 10 14 16 18 97 98 99
init_declarator_list (99)
    on left: 19 20 21, on right: 10 20 21
init_declarator (100)
    on left: 22 23 24, on right: 19 20
storage_class_specifier (101)
    on left: 25 26 27 28 29, on right: 13 14
type_specifier (102)
    on left: 30 31 32 33 34 35 36 37 38 39 40 41, on right: 15 16 56
    57
type_qualifier (103)
    on left: 42 43, on right: 17 18 58 59 91 92
struct_or_union_specifier (104)
    on left: 45, on right: 39
$@1 (105)
    on left: 44, on right: 45
factorizacion_struct_or_union_specifier (106)
    on left: 47 49 50, on right: 45
$@2 (107)
    on left: 46, on right: 47
$@3 (108)
    on left: 48, on right: 49
struct_or_union (109)
    on left: 51 52, on right: 45
struct_declaration_list (110)
    on left: 53 54, on right: 47 49 54
struct_declaration (111)
    on left: 55, on right: 53 54
specifier_qualifier_list (112)
    on left: 56 57 58 59, on right: 55 57 59 107 108
struct_declarator_list (113)
    on left: 60 61, on right: 55 61
struct_declarator (114)
    on left: 62 63 64, on right: 60 61
enum_specifier (115)
    on left: 66, on right: 40
$@4 (116)
    on left: 65, on right: 66
factorizacion_enum_specifier (117)
    on left: 67 68 69, on right: 66
enumerator_list (118)
    on left: 70 71, on right: 67 68 71
enumerator (119)
    on left: 72 73, on right: 70 71
declarator (120)
    on left: 74 75, on right: 5 6 7 8 22 23 24 62 64 77 97
direct_declarator (121)
    on left: 76 77 78 79 81, on right: 74 75 78 79 81
$@5 (122)
    on left: 80, on right: 81
factorizacion_direct_declarator (123)
    on left: 82 83 84, on right: 81
pointer (124)
    on left: 86, on right: 74 89 90 109 111
$@6 (125)
    on left: 85, on right: 86
factorizacion_pointer (126)
    on left: 87 88 89 90, on right: 86
type_qualifier_list (127)
    on left: 91 92, on right: 88 90 92
parameter_type_list (128)
    on left: 93 94, on right: 82 118 120
parameter_list (129)
    on left: 95 96, on right: 93 94 96
parameter_declaration (130)
    on left: 97 98 99, on right: 95 96
identifier_list (131)
    on left: 100 101, on right: 83 101
initializer (132)
    on left: 102 103 104, on right: 23 105 106
initializer_list (133)
    on left: 105 106, on right: 103 104 106
type_name (134)
    on left: 107 108, on right: 236 246
abstract_declarator (135)
    on left: 109 110 111, on right: 98 108 112
direct_abstract_declarator (136)
    on left: 112 113 114 115 116 117 118 119 120, on right: 110 111
    115 116 119 120
statement (137)
    on left: 121 122 123 124 125 126, on right: 128 130 132 135 144
    145 149 150 151 154 156 159 160
labeled_statement (138)
    on left: 128 130 132 133 135, on right: 121
$@7 (139)
    on left: 127, on right: 128
$@8 (140)
    on left: 129, on right: 130
$@9 (141)
    on left: 131, on right: 132
$@10 (142)
    on left: 134, on right: 135
expression_statement (143)
    on left: 136 137, on right: 122 159 160
compound_statement (144)
    on left: 139, on right: 5 6 7 8 123
$@11 (145)
    on left: 138, on right: 139
factorizacion_compound_statement (146)
    on left: 140 141 142 143, on right: 139
statement_list (147)
    on left: 144 145, on right: 141 143 145
selection_statement (148)
    on left: 147 149, on right: 124
$@12 (149)
    on left: 146, on right: 147
$@13 (150)
    on left: 148, on right: 149
factorizacion_selection_statement (151)
    on left: 150 151 152, on right: 147
iteration_statement (152)
    on left: 154 156 158, on right: 125
$@14 (153)
    on left: 153, on right: 154
$@15 (154)
    on left: 155, on right: 156
$@16 (155)
    on left: 157, on right: 158
factorizacion_iteration_statement (156)
    on left: 159 160, on right: 158
jump_statement (157)
    on left: 162 164 166 168, on right: 126
$@17 (158)
    on left: 161, on right: 162
$@18 (159)
    on left: 163, on right: 164
$@19 (160)
    on left: 165, on right: 166
$@20 (161)
    on left: 167, on right: 168
factorizacion_jump_statement (162)
    on left: 169 170, on right: 168
expression (163)
    on left: 171 172 173, on right: 137 149 150 151 154 156 160 170
    172 173 189 191 254 268
assignment_expression (164)
    on left: 174 175, on right: 102 171 172 175 261 262
assignment_operator (165)
    on left: 176 177 178 179 180 181 182 183 184 185 186, on right:
    175
constant_expression (166)
    on left: 187, on right: 63 64 73 78 114 116 132
conditional_expression (167)
    on left: 188 189 190 191, on right: 174 187 189 190
logical_or_expression (168)
    on left: 192 193 194, on right: 188 189 190 191 193 194
logical_and_expression (169)
    on left: 195 196 197, on right: 192 193 196 197
inclusive_or_expression (170)
    on left: 198 199, on right: 195 196 199
exclusive_or_expression (171)
    on left: 200 201, on right: 198 199 201
and_expression (172)
    on left: 202 203 204, on right: 200 201 203 204
equality_expression (173)
    on left: 205 206 207 208 209, on right: 202 203 206 207 208 209
relational_expression (174)
    on left: 210 211 212 213 214 215 216 217 218, on right: 205 206
    208 211 212 213 214 215 216 217 218
shift_expression (175)
    on left: 219 220 221, on right: 210 211 213 215 217 220 221
additive_expression (176)
    on left: 222 223 224 225 226, on right: 219 220 221 223 224 225
    226
multiplicative_expression (177)
    on left: 227 228 229 230 231 232 233, on right: 222 223 225 228
    229 230 231 232 233
cast_expression (178)
    on left: 234 236, on right: 227 228 230 232 236 242
$@21 (179)
    on left: 235, on right: 236
unary_expression (180)
    on left: 237 239 241 242 244, on right: 175 234 239 241 245
$@22 (181)
    on left: 238, on right: 239
$@23 (182)
    on left: 240, on right: 241
$@24 (183)
    on left: 243, on right: 244
factorizacion_unary_expression (184)
    on left: 245 246, on right: 244
unary_operator (185)
    on left: 247 248 249 250 251 252, on right: 242
postfix_expression (186)
    on left: 253 254 255 256 257 258 259 260, on right: 237 254 255
    256 257 258 259 260
argument_expression_list (187)
    on left: 261 262, on right: 256 262
primary_expression (188)
    on left: 263 264 265 266 268, on right: 253
$@25 (189)
    on left: 267, on right: 268
constante_entera (190)
    on left: 269 270 271 272, on right: 264
constante_real (191)
    on left: 273 274 275, on right: 265


state 0

    0 $accept: . translation_unit $end
    1 translation_unit: . external_declaration
    2                 | . translation_unit external_declaration
    3 external_declaration: . function_definition
    4                     | . declaration
    5 function_definition: . declaration_specifiers declarator declaration_list compound_statement
    6                    | . declaration_specifiers declarator compound_statement
    7                    | . declarator declaration_list compound_statement
    8                    | . declarator compound_statement
    9 declaration: . declaration_specifiers ';'
   10            | . declaration_specifiers init_declarator_list ';'
   13 declaration_specifiers: . storage_class_specifier
   14                       | . storage_class_specifier declaration_specifiers
   15                       | . type_specifier
   16                       | . type_specifier declaration_specifiers
   17                       | . type_qualifier
   18                       | . type_qualifier declaration_specifiers
   25 storage_class_specifier: . "auto"
   26                        | . "register"
   27                        | . "static"
   28                        | . "extern"
   29                        | . "typedef"
   30 type_specifier: . "void"
   31               | . "char"
   32               | . "short"
   33               | . "int"
   34               | . "long"
   35               | . "float"
   36               | . "double"
   37               | . "signed"
   38               | . "unsigned"
   39               | . struct_or_union_specifier
   40               | . enum_specifier
   41               | . NOMBRE_DE_TYPEDEF
   42 type_qualifier: . "const"
   43               | . "volatile"
   45 struct_or_union_specifier: . struct_or_union $@1 factorizacion_struct_or_union_specifier
   51 struct_or_union: . "struct"
   52                | . "union"
   66 enum_specifier: . "enum" $@4 factorizacion_enum_specifier
   74 declarator: . pointer direct_declarator
   75           | . direct_declarator
   76 direct_declarator: . IDENTIFICADOR
   77                  | . '(' declarator ')'
   78                  | . direct_declarator '[' constant_expression ']'
   79                  | . direct_declarator '[' ']'
   81                  | . direct_declarator '(' $@5 factorizacion_direct_declarator
   86 pointer: . '*' $@6 factorizacion_pointer

    "typedef"          shift, and go to state 1
    "extern"           shift, and go to state 2
    "static"           shift, and go to state 3
    "auto"             shift, and go to state 4
    "register"         shift, and go to state 5
    "void"             shift, and go to state 6
    "char"             shift, and go to state 7
    "short"            shift, and go to state 8
    "int"              shift, and go to state 9
    "long"             shift, and go to state 10
    "float"            shift, and go to state 11
    "double"           shift, and go to state 12
    "signed"           shift, and go to state 13
    "unsigned"         shift, and go to state 14
    "const"            shift, and go to state 15
    "volatile"         shift, and go to state 16
    "struct"           shift, and go to state 17
    "union"            shift, and go to state 18
    "enum"             shift, and go to state 19
    IDENTIFICADOR      shift, and go to state 20
    NOMBRE_DE_TYPEDEF  shift, and go to state 21
    '('                shift, and go to state 22
    '*'                shift, and go to state 23

    translation_unit           go to state 24
    external_declaration       go to state 25
    function_definition        go to state 26
    declaration                go to state 27
    declaration_specifiers     go to state 28
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    type_qualifier             go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33
    enum_specifier             go to state 34
    declarator                 go to state 35
    direct_declarator          go to state 36
    pointer                    go to state 37


state 1

   29 storage_class_specifier: "typedef" .

    $default  reduce using rule 29 (storage_class_specifier)


state 2

   28 storage_class_specifier: "extern" .

    $default  reduce using rule 28 (storage_class_specifier)


state 3

   27 storage_class_specifier: "static" .

    $default  reduce using rule 27 (storage_class_specifier)


state 4

   25 storage_class_specifier: "auto" .

    $default  reduce using rule 25 (storage_class_specifier)


state 5

   26 storage_class_specifier: "register" .

    $default  reduce using rule 26 (storage_class_specifier)


state 6

   30 type_specifier: "void" .

    $default  reduce using rule 30 (type_specifier)


state 7

   31 type_specifier: "char" .

    $default  reduce using rule 31 (type_specifier)


state 8

   32 type_specifier: "short" .

    $default  reduce using rule 32 (type_specifier)


state 9

   33 type_specifier: "int" .

    $default  reduce using rule 33 (type_specifier)


state 10

   34 type_specifier: "long" .

    $default  reduce using rule 34 (type_specifier)


state 11

   35 type_specifier: "float" .

    $default  reduce using rule 35 (type_specifier)


state 12

   36 type_specifier: "double" .

    $default  reduce using rule 36 (type_specifier)


state 13

   37 type_specifier: "signed" .

    $default  reduce using rule 37 (type_specifier)


state 14

   38 type_specifier: "unsigned" .

    $default  reduce using rule 38 (type_specifier)


state 15

   42 type_qualifier: "const" .

    $default  reduce using rule 42 (type_qualifier)


state 16

   43 type_qualifier: "volatile" .

    $default  reduce using rule 43 (type_qualifier)


state 17

   51 struct_or_union: "struct" .

    $default  reduce using rule 51 (struct_or_union)


state 18

   52 struct_or_union: "union" .

    $default  reduce using rule 52 (struct_or_union)


state 19

   65 $@4: .
   66 enum_specifier: "enum" . $@4 factorizacion_enum_specifier

    $default  reduce using rule 65 ($@4)

    $@4  go to state 38


state 20

   76 direct_declarator: IDENTIFICADOR .

    $default  reduce using rule 76 (direct_declarator)


state 21

   41 type_specifier: NOMBRE_DE_TYPEDEF .

    $default  reduce using rule 41 (type_specifier)


state 22

   74 declarator: . pointer direct_declarator
   75           | . direct_declarator
   76 direct_declarator: . IDENTIFICADOR
   77                  | . '(' declarator ')'
   77                  | '(' . declarator ')'
   78                  | . direct_declarator '[' constant_expression ']'
   79                  | . direct_declarator '[' ']'
   81                  | . direct_declarator '(' $@5 factorizacion_direct_declarator
   86 pointer: . '*' $@6 factorizacion_pointer

    IDENTIFICADOR  shift, and go to state 20
    '('            shift, and go to state 22
    '*'            shift, and go to state 23

    declarator         go to state 39
    direct_declarator  go to state 36
    pointer            go to state 37


state 23

   85 $@6: .
   86 pointer: '*' . $@6 factorizacion_pointer

    $default  reduce using rule 85 ($@6)

    $@6  go to state 40


state 24

    0 $accept: translation_unit . $end
    2 translation_unit: translation_unit . external_declaration
    3 external_declaration: . function_definition
    4                     | . declaration
    5 function_definition: . declaration_specifiers declarator declaration_list compound_statement
    6                    | . declaration_specifiers declarator compound_statement
    7                    | . declarator declaration_list compound_statement
    8                    | . declarator compound_statement
    9 declaration: . declaration_specifiers ';'
   10            | . declaration_specifiers init_declarator_list ';'
   13 declaration_specifiers: . storage_class_specifier
   14                       | . storage_class_specifier declaration_specifiers
   15                       | . type_specifier
   16                       | . type_specifier declaration_specifiers
   17                       | . type_qualifier
   18                       | . type_qualifier declaration_specifiers
   25 storage_class_specifier: . "auto"
   26                        | . "register"
   27                        | . "static"
   28                        | . "extern"
   29                        | . "typedef"
   30 type_specifier: . "void"
   31               | . "char"
   32               | . "short"
   33               | . "int"
   34               | . "long"
   35               | . "float"
   36               | . "double"
   37               | . "signed"
   38               | . "unsigned"
   39               | . struct_or_union_specifier
   40               | . enum_specifier
   41               | . NOMBRE_DE_TYPEDEF
   42 type_qualifier: . "const"
   43               | . "volatile"
   45 struct_or_union_specifier: . struct_or_union $@1 factorizacion_struct_or_union_specifier
   51 struct_or_union: . "struct"
   52                | . "union"
   66 enum_specifier: . "enum" $@4 factorizacion_enum_specifier
   74 declarator: . pointer direct_declarator
   75           | . direct_declarator
   76 direct_declarator: . IDENTIFICADOR
   77                  | . '(' declarator ')'
   78                  | . direct_declarator '[' constant_expression ']'
   79                  | . direct_declarator '[' ']'
   81                  | . direct_declarator '(' $@5 factorizacion_direct_declarator
   86 pointer: . '*' $@6 factorizacion_pointer

    $end               shift, and go to state 41
    "typedef"          shift, and go to state 1
    "extern"           shift, and go to state 2
    "static"           shift, and go to state 3
    "auto"             shift, and go to state 4
    "register"         shift, and go to state 5
    "void"             shift, and go to state 6
    "char"             shift, and go to state 7
    "short"            shift, and go to state 8
    "int"              shift, and go to state 9
    "long"             shift, and go to state 10
    "float"            shift, and go to state 11
    "double"           shift, and go to state 12
    "signed"           shift, and go to state 13
    "unsigned"         shift, and go to state 14
    "const"            shift, and go to state 15
    "volatile"         shift, and go to state 16
    "struct"           shift, and go to state 17
    "union"            shift, and go to state 18
    "enum"             shift, and go to state 19
    IDENTIFICADOR      shift, and go to state 20
    NOMBRE_DE_TYPEDEF  shift, and go to state 21
    '('                shift, and go to state 22
    '*'                shift, and go to state 23

    external_declaration       go to state 42
    function_definition        go to state 26
    declaration                go to state 27
    declaration_specifiers     go to state 28
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    type_qualifier             go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33
    enum_specifier             go to state 34
    declarator                 go to state 35
    direct_declarator          go to state 36
    pointer                    go to state 37


state 25

    1 translation_unit: external_declaration .

    $default  reduce using rule 1 (translation_unit)


state 26

    3 external_declaration: function_definition .

    $default  reduce using rule 3 (external_declaration)


state 27

    4 external_declaration: declaration .

    $default  reduce using rule 4 (external_declaration)


state 28

    5 function_definition: declaration_specifiers . declarator declaration_list compound_statement
    6                    | declaration_specifiers . declarator compound_statement
    9 declaration: declaration_specifiers . ';'
   10            | declaration_specifiers . init_declarator_list ';'
   19 init_declarator_list: . init_declarator
   20                     | . init_declarator_list ',' init_declarator
   21                     | . init_declarator_list ',' error
   22 init_declarator: . declarator
   23                | . declarator '=' initializer
   24                | . declarator error
   74 declarator: . pointer direct_declarator
   75           | . direct_declarator
   76 direct_declarator: . IDENTIFICADOR
   77                  | . '(' declarator ')'
   78                  | . direct_declarator '[' constant_expression ']'
   79                  | . direct_declarator '[' ']'
   81                  | . direct_declarator '(' $@5 factorizacion_direct_declarator
   86 pointer: . '*' $@6 factorizacion_pointer

    IDENTIFICADOR  shift, and go to state 20
    ';'            shift, and go to state 43
    '('            shift, and go to state 22
    '*'            shift, and go to state 23

    init_declarator_list  go to state 44
    init_declarator       go to state 45
    declarator            go to state 46
    direct_declarator     go to state 36
    pointer               go to state 37


state 29

   13 declaration_specifiers: . storage_class_specifier
   13                       | storage_class_specifier .  [IDENTIFICADOR, ';', ',', '(', ')', '[', '*']
   14                       | . storage_class_specifier declaration_specifiers
   14                       | storage_class_specifier . declaration_specifiers
   15                       | . type_specifier
   16                       | . type_specifier declaration_specifiers
   17                       | . type_qualifier
   18                       | . type_qualifier declaration_specifiers
   25 storage_class_specifier: . "auto"
   26                        | . "register"
   27                        | . "static"
   28                        | . "extern"
   29                        | . "typedef"
   30 type_specifier: . "void"
   31               | . "char"
   32               | . "short"
   33               | . "int"
   34               | . "long"
   35               | . "float"
   36               | . "double"
   37               | . "signed"
   38               | . "unsigned"
   39               | . struct_or_union_specifier
   40               | . enum_specifier
   41               | . NOMBRE_DE_TYPEDEF
   42 type_qualifier: . "const"
   43               | . "volatile"
   45 struct_or_union_specifier: . struct_or_union $@1 factorizacion_struct_or_union_specifier
   51 struct_or_union: . "struct"
   52                | . "union"
   66 enum_specifier: . "enum" $@4 factorizacion_enum_specifier

    "typedef"          shift, and go to state 1
    "extern"           shift, and go to state 2
    "static"           shift, and go to state 3
    "auto"             shift, and go to state 4
    "register"         shift, and go to state 5
    "void"             shift, and go to state 6
    "char"             shift, and go to state 7
    "short"            shift, and go to state 8
    "int"              shift, and go to state 9
    "long"             shift, and go to state 10
    "float"            shift, and go to state 11
    "double"           shift, and go to state 12
    "signed"           shift, and go to state 13
    "unsigned"         shift, and go to state 14
    "const"            shift, and go to state 15
    "volatile"         shift, and go to state 16
    "struct"           shift, and go to state 17
    "union"            shift, and go to state 18
    "enum"             shift, and go to state 19
    NOMBRE_DE_TYPEDEF  shift, and go to state 21

    $default  reduce using rule 13 (declaration_specifiers)
